@@ -51,7 +51,7 @@ class CRM_Wci_Page_WidgetList extends CRM_Core_Page {
       $wid_page[$dao->id] = array();
       CRM_Core_DAO::storeValues($dao, $wid_page[$dao->id]);
       $wid_page[$dao->id]['title'] = $wid_page[$dao->id]['title'];
-      $description = base64_decode($wid_page[$dao->id]['description']);
+      $description = $wid_page[$dao->id]['description'];
       $wid_page[$dao->id]['description'] = strip_tags($description);
      
       $action = array_sum(array_keys($this->actionLinks())); 
